--- a/churrascometro/index.html
+++ b/churrascometro/index.html
@@ -15,9 +15,9 @@
         <img src="./images/churrasco.png" />
         <h2>Churrasco na medida certa</h2>
 
-        <input id="adultos" name="adultos" type="number" placeholder="Adultos" />
-        <input id="criancas" name="criancas" type="number" placeholder="Crianças" />
-        <input id="duracao" name="duracao" type="number" placeholder="Duração (h)" />
+        <input id="adultos" name="adultos" type="number" placeholder="Quantos adultos?" />
+        <input id="criancas" name="criancas" type="number" placeholder="Quantas crianças?" />
+        <input id="duracao" name="duracao" type="number" placeholder="Qual a duração(h)?" />
         <button onclick="calcular()">Calcular</button>
 
         <div id="resultado"></div>
