--- a/churrascometro/index.html
+++ b/churrascometro/index.html
@@ -23,10 +23,16 @@
         <div id="resultado"></div>
     </div>
 
-    <div class="credit">Ícones feitos por
-         <a href="http://www.freepik.com/" title="Freepik">Freepik</a> 
-         from 
-         <a href="https://www.flaticon.com/br/" title="Flaticon">www.flaticon.com</a>
+    <div class="credit">
+        <p>
+            Ícones feitos por
+            <a href="http://www.freepik.com/" title="Freepik">Freepik</a> 
+            from 
+            <a href="https://www.flaticon.com/br/" title="Flaticon">www.flaticon.com</a>
+        </p>
+        <p>
+            Feito por Luiz Mota
+        </p>
     </div>
     <script src="./scripts/script.js"></script>
 </body>
