--- a/churrascometro/index.html
+++ b/churrascometro/index.html
@@ -31,7 +31,7 @@
             <a href="https://www.flaticon.com/br/" title="Flaticon">www.flaticon.com</a>
         </p>
         <p>
-            Feito por Luiz Mota
+            Churrascômetro feito por Luiz Mota
         </p>
     </div>
     <script src="./scripts/script.js"></script>
