--- a/churrascometro/index.html
+++ b/churrascometro/index.html
@@ -18,7 +18,7 @@
         <input id="adultos" name="adultos" type="number" placeholder="Quantos adultos?" />
         <input id="criancas" name="criancas" type="number" placeholder="Quantas crianças?" />
         <input id="duracao" name="duracao" type="number" placeholder="Qual a duração(h)?" />
-        <button onclick="calcular()">Calcular</button>
+        <button onclick="calcular()">O que vou precisar?</button>
 
         <div id="resultado"></div>
     </div>
