--- a/musicplayer/index.html
+++ b/musicplayer/index.html
@@ -26,6 +26,7 @@
                 <source src="./songs/happyrock.mp3" type="audio/mpeg" />
             </audio>
         </div>
+        <p class="credit">Feito por Luiz Mota</p>
     </div>
 
     <script src="./scripts/script.js"></script>
